--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,58 @@
 node_modules
 *.log
+
+node_modules
+/out
+/cache
+
+
+# dependencies
+node_modules
+.pnp
+.pnp.js
+
+# testing
+coverage
+coverage.json
+typechain
+
+# production
+build
+
+# misc
+.idea
+.DS_Store
+.env*
+settings.json
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
+
+#Hardhat files
+cache
+artifacts
+
+# OpenZeppelin
+.openzeppelin/unknown-*.json
+.openzeppelin/.session
+
+# Certora
+.certora*
+resource_errors.json
+last_conf*
+
+certora*.txt
+.zip-output-url.txt
+
+*.png
+*.gv
+certora/misc/flatAaveV2Strategy.sol
+certora/misc/flatCompoundStrategy.sol
+certora/misc/flatPriceFeedProvider.sol
+certora/misc/flatPriceOracle.sol
+certora/misc/flatRegistry.sol
+certora/misc/flatSmartVault.sol
+certora/misc/flatSwapConnector.sol
